errors.txt
mkdir -p ../objs/blas
g++ -std=c++11 -fPIC -w -c -O3 -DUNIX -I../include -Iinclude src/lispe_cblas.cxx -o ../objs/blas/lispe_cblas.o
src/lispe_cblas.cxx: In member function ‘Element* Lispe_blas::axpy(LispE*)’:
src/lispe_cblas.cxx:148:9: error: ‘axpy_’ was not declared in this scope; did you mean ‘axpy’?
  148 |         axpy_(&sz, &v, xbuff, &incx, ybuff, &incy);
      |         ^~~~~
      |         axpy
src/lispe_cblas.cxx:158:9: error: ‘axpy_’ was not declared in this scope; did you mean ‘axpy’?
  158 |         axpy_(&sz, &v, xbuff, &incx, ybuff, &incy);
      |         ^~~~~
      |         axpy
src/lispe_cblas.cxx:168:9: error: ‘axpy_’ was not declared in this scope; did you mean ‘axpy’?
  168 |         axpy_(&sz, &v, xbuff, &incx, ybuff, &incy);
      |         ^~~~~
      |         axpy
src/lispe_cblas.cxx:178:9: error: ‘axpy_’ was not declared in this scope; did you mean ‘axpy’?
  178 |         axpy_(&sz, &v, xbuff, &incx, ybuff, &incy);
      |         ^~~~~
      |         axpy
src/lispe_cblas.cxx: In member function ‘Element* Lispe_blas::ger(LispE*)’:
src/lispe_cblas.cxx:352:17: error: ‘BLAS_ORDER_COL’ was not declared in this scope; did you mean ‘CBLAS_ORDER’?
  352 |         order = BLAS_ORDER_COL;
      |                 ^~~~~~~~~~~~~~
      |                 CBLAS_ORDER
src/lispe_cblas.cxx:354:17: error: ‘BLAS_ORDER_ROW’ was not declared in this scope; did you mean ‘CBLAS_ORDER’?
  354 |         order = BLAS_ORDER_ROW;
      |                 ^~~~~~~~~~~~~~
      |                 CBLAS_ORDER
src/lispe_cblas.cxx: In member function ‘Element* Lispe_blas::trsv(LispE*)’:
src/lispe_cblas.cxx:901:21: error: cannot convert ‘char*’ to ‘CBLAS_LAYOUT’
  901 |         cblas_strsv(&lay, &up, &op, &unit, &n, a, &lda, xbuff, &incx);
      |                     ^~~~
      |                     |
      |                     char*
In file included from src/lispe_cblas.cxx:17:
/usr/include/x86_64-linux-gnu/cblas.h:181:31: note:   initializing argument 1 of ‘void cblas_strsv(CBLAS_LAYOUT, CBLAS_UPLO, CBLAS_TRANSPOSE, CBLAS_DIAG, int, const float*, int, float*, int)’
  181 | void cblas_strsv(CBLAS_LAYOUT layout, CBLAS_UPLO Uplo,
      |                  ~~~~~~~~~~~~~^~~~~~
src/lispe_cblas.cxx:910:21: error: cannot convert ‘char*’ to ‘CBLAS_LAYOUT’
  910 |         cblas_dtrsv(&lay, &up, &op, &unit, &n, a, &lda, xbuff, &incx);
      |                     ^~~~
      |                     |
      |                     char*
In file included from src/lispe_cblas.cxx:17:
/usr/include/x86_64-linux-gnu/cblas.h:214:31: note:   initializing argument 1 of ‘void cblas_dtrsv(CBLAS_LAYOUT, CBLAS_UPLO, CBLAS_TRANSPOSE, CBLAS_DIAG, int, const double*, int, double*, int)’
  214 | void cblas_dtrsv(CBLAS_LAYOUT layout, CBLAS_UPLO Uplo,
      |                  ~~~~~~~~~~~~~^~~~~~
src/lispe_cblas.cxx: In member function ‘Element* Lispe_blas::herk(LispE*)’:
src/lispe_cblas.cxx:1059:26: error: cannot convert ‘CBLAS_UPLO’ to ‘CBLAS_SIDE’
 1059 |         cblas_ssymm(lay, up, op, n, k, alpha_float, a, lda, c, ldc);
      |                          ^~
      |                          |
      |                          CBLAS_UPLO
In file included from src/lispe_cblas.cxx:17:
/usr/include/x86_64-linux-gnu/cblas.h:434:50: note:   initializing argument 2 of ‘void cblas_ssymm(CBLAS_LAYOUT, CBLAS_SIDE, CBLAS_UPLO, int, int, float, const float*, int, const float*, int, float, float*, int)’
  434 | void cblas_ssymm(CBLAS_LAYOUT layout, CBLAS_SIDE Side,
      |                                       ~~~~~~~~~~~^~~~
src/lispe_cblas.cxx:1067:26: error: cannot convert ‘CBLAS_UPLO’ to ‘CBLAS_SIDE’
 1067 |         cblas_dsymm(lay, up, op, n, k, alpha_double, a, lda, c, ldc);
      |                          ^~
      |                          |
      |                          CBLAS_UPLO
In file included from src/lispe_cblas.cxx:17:
/usr/include/x86_64-linux-gnu/cblas.h:464:50: note:   initializing argument 2 of ‘void cblas_dsymm(CBLAS_LAYOUT, CBLAS_SIDE, CBLAS_UPLO, int, int, double, const double*, int, const double*, int, double, double*, int)’
  464 | void cblas_dsymm(CBLAS_LAYOUT layout, CBLAS_SIDE Side,
      |                                       ~~~~~~~~~~~^~~~
src/lispe_cblas.cxx: In member function ‘Element* Lispe_blas::her2k(LispE*)’:
src/lispe_cblas.cxx:1170:22: error: conflicting declaration ‘CBLAS_LAYOUT layout’
 1170 |     enum CBLAS_ORDER layout = CblasColMajor;
      |                      ^~~~~~
src/lispe_cblas.cxx:1160:10: note: previous declaration as ‘bool layout’
 1160 |     bool layout = lisp->get_variable(L"layout")->Boolean();
      |          ^~~~~~
src/lispe_cblas.cxx:1174:21: error: conflicting declaration ‘CBLAS_UPLO uplo’
 1174 |     enum CBLAS_UPLO uplo = CblasUpper;
      |                     ^~~~
src/lispe_cblas.cxx:1162:10: note: previous declaration as ‘long int uplo’
 1162 |     long uplo = lisp->get_variable(L"uplo")->asInteger();
      |          ^~~~
src/lispe_cblas.cxx:1178:26: error: conflicting declaration ‘CBLAS_TRANSPOSE trans’
 1178 |     enum CBLAS_TRANSPOSE trans;
      |                          ^~~~~
src/lispe_cblas.cxx:1161:10: note: previous declaration as ‘long int trans’
 1161 |     long trans = lisp->get_variable(L"trans")->asInteger();
      |          ^~~~~
src/lispe_cblas.cxx:1203:22: error: cannot convert ‘bool’ to ‘CBLAS_LAYOUT’
 1203 |         cblas_cher2k(layout, uplo, trans, n, k, alpha, a, lda, b, ldb, beta, c, ldc);
      |                      ^~~~~~
      |                      |
      |                      bool
In file included from src/lispe_cblas.cxx:17:
/usr/include/x86_64-linux-gnu/cblas.h:562:32: note:   initializing argument 1 of ‘void cblas_cher2k(CBLAS_LAYOUT, CBLAS_UPLO, CBLAS_TRANSPOSE, int, int, const void*, const void*, int, const void*, int, float, void*, int)’
  562 | void cblas_cher2k(CBLAS_LAYOUT layout, CBLAS_UPLO Uplo,
      |                   ~~~~~~~~~~~~~^~~~~~
src/lispe_cblas.cxx:1215:22: error: cannot convert ‘bool’ to ‘CBLAS_LAYOUT’
 1215 |         cblas_zher2k(layout, uplo, trans, n, k, alpha, a, lda, b, ldb, beta, c, ldc);
      |                      ^~~~~~
      |                      |
      |                      bool
In file included from src/lispe_cblas.cxx:17:
/usr/include/x86_64-linux-gnu/cblas.h:577:32: note:   initializing argument 1 of ‘void cblas_zher2k(CBLAS_LAYOUT, CBLAS_UPLO, CBLAS_TRANSPOSE, int, int, const void*, const void*, int, const void*, int, double, void*, int)’
  577 | void cblas_zher2k(CBLAS_LAYOUT layout, CBLAS_UPLO Uplo,
      |                   ~~~~~~~~~~~~~^~~~~~
src/lispe_cblas.cxx: In member function ‘Element* Lispe_blas::syr2k(LispE*)’:
src/lispe_cblas.cxx:1276:9: error: ‘cblas_syr2k’ was not declared in this scope; did you mean ‘cblas_zsyr2k’?
 1276 |         cblas_syr2k(lay, up, op, n, k, alpha, a, lda, b, ldb, beta, c, ldc);
      |         ^~~~~~~~~~~
      |         cblas_zsyr2k
src/lispe_cblas.cxx:1289:9: error: ‘cblas_syr2k’ was not declared in this scope; did you mean ‘cblas_zsyr2k’?
 1289 |         cblas_syr2k(lay, up, op, n, k, alpha, a, lda, b, ldb, beta, c, ldc);
      |         ^~~~~~~~~~~
      |         cblas_zsyr2k
make: *** [Makefile:16 : ../objs/blas/lispe_cblas.o] Erreur 1
